--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -27,4 +27,11 @@ h1, h2, h3, h4, h5, h6 {
 
 .blockquote {
   padding-top: 10px;
+  padding-left: 2vw;
+  padding-right: 2vw;
+}
+
+.padded-text {
+  padding-left: 2vw;
+  padding-right: 2vw;
 }
