--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -1,5 +1,7 @@
 $enable-responsive-font-sizes: true;
 
+$green: #204022;
+
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/mixins";
@@ -18,6 +20,14 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: "Cormorant Infant", serif;
   font-style: italic;
+}
+
+a {
+  color: $green;
+}
+
+a:hover {
+  color: $green;
 }
 
 .serif {
